# hoverpadv2

./: .gitignore  CLAUDE.md  DATABASE.md  FEATURES.md  README.md  REMINDERS.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-macos.yml
docs/: PLANNING.md
docs/adrs/: ADR-001-css-framework.md  ADR-002-state-management.md  ADR-004-kanban-columns.md  ADR-005-kanban-dnd-and-calendar.md  ADR-006-note-filename-strategy.md  ADR-007-markdown-editor.md  ADR-008-tauri-overlay-windows.md
docs/feedback/: user-testing-round1.md
docs/progress/: P1-01-scaffold.md  P1-02-multi-window.md  P1-03-hotkeys.md  P1-04-sqlite-schema.md  P1-05-window-chrome.md  P2-01-mdxeditor.md  P2-02-note-crud.md  P2-03-auto-save.md  P2-04-note-listing.md  P3-01-collapsible-panel.md  P3-02-zustand-store.md  P3-03-kanban-board.md  P3-04-ticket-linking.md  P4-01-session-discovery.md  P4-02-session-window-ui.md  P4-03-session-list.md  P5-01-opacity-controls.md  P5-02-window-persistence.md  P5-03-styling-polish.md  P6-01-control-panel-cleanup.md  P6-02-kanban-open-notes.md  P6-03-notelist-cleanup.md  P6-04-window-min-size.md  P6-05-note-rename.md  P6-06-note-preview.md  P6-07-note-activity-sections.md  P6-08-session-accordion.md  P6-09-session-polish.md  P7-01-toolbar-fix.md  P7-02-notelist-columns.md  P7-03-ticket-descriptions.md  P7-04-session-timeline.md  P7-05-note-delete-window.md  P7-06-editor-toolbar.md  project.md  (+2 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  session_watcher.rs  window_group.rs
(+69 files in other folders)
